Configuration builder 7.x-1.0-beta1, 2012-07-13
--------------------------------------------------------------------------------

- Initial commit.